text-speech-api

--- a/level1.html
+++ b/level1.html
@@ -6,11 +6,7 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="js/pickup.js"></script>
     <script src="js/cut.js"></script>
-<<<<<<< HEAD
     <script src="js/cats.js"></script>
-=======
-    <script src="js/place.js"></script>
->>>>>>> felipe
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/levelselect.js"></script>
 
@@ -105,6 +101,8 @@
         <a-entity pickup class="js--interact js--pickup" id="mes" gltf-model="#chefsmes-glb" metalness: 1; roughness: 0; rotation="90 -90 0" position="0.146 1.155 0.475" scale="0.1 0.1 0.1"></a-entity>
         <a-entity place class="js--placeholder js--interact" id="js--cuttingBoard" gltf-model="#snijplank-glb" rotation="0 90 0" position="0.6 1.16 0.6" scale="0.35 0.35 0.35"></a-entity>
 
+        <a-text id="js--uiText" value="Hallo"></a-text>
+
         <!--ingredienten-->
         <a-entity pickup class="js--interact js--pickup" id="broodje" gltf-model="#broodje-glb" position="-1 1.14 0.5" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="slablaadje" gltf-model="#slablaadje-glb" position="1 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
@@ -122,5 +120,6 @@
         <a-entity gltf-model="#frame-glb" position="4.99 2 1" rotation="0 180 0"></a-entity>
         <a-image cats id="cat" src="" position="4.99 2 1" rotation="0 90 0" scale="2 2 2"></a-image>
     </a-scene>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=EC55QW6T"></script>
 </body>
 </html>
