--- a/level1.html
+++ b/level1.html
@@ -105,6 +105,7 @@
         <a-entity pickup class="js--interact js--pickup" id="slablaadje" gltf-model="#slablaadje-glb" position="1 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="burger" gltf-model="#burger-glb" position="0.5 1.14 1.4" scale="0.3 0.3 0.3"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="tomaat" gltf-model="#tomaat-glb" position="0 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
+        <a-entity pickup class="js--interact js--pickup" id="gesnedentomaat" gltf-model="#plakjes-glb" position="0.6 1.17 0.6" scale="0.3 0.3 0.3" visible="false"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="ketchup" gltf-model="#ketchup-glb" position="0.3 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
         <a-entity pickup class="js--interact js--pickup" id="olie" gltf-model="#olie-glb" position="0.6 1.14 1.4" scale="0.05 0.05 0.05"></a-entity>
         
